// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthedNavbar /> renders 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-navbar-1 mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-dense MuiToolbar-gutters"
    >
      <div
        class="makeStyles-logoContainer-2"
      >
        <a
          class="makeStyles-link-6"
          href="/"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                ConsenSource
              </h5>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <hr
                class="MuiDivider-root makeStyles-divider-4 MuiDivider-vertical"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h6
                class="MuiTypography-root makeStyles-persona-3 MuiTypography-h6"
              >
                Retailer
              </h6>
            </div>
          </div>
        </a>
      </div>
      <a
        class="makeStyles-link-6"
        href="http://consensource.io"
        target="_blank"
      >
        <p
          class="MuiTypography-root makeStyles-link-7 false MuiTypography-body1"
        >
          About
        </p>
      </a>
      <a
        class="makeStyles-link-6"
        href="/search"
        target=""
      >
        <p
          class="MuiTypography-root makeStyles-link-7 false MuiTypography-body1"
        >
          Search Factories
        </p>
      </a>
      <div>
        <button
          aria-label="profile"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`<UnauthedNavbar /> renders 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-navbar-9 mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-dense MuiToolbar-gutters"
    >
      <div
        class="makeStyles-logoContainer-10"
      >
        <a
          class="makeStyles-link-14"
          href="/"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                ConsenSource
              </h5>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <hr
                class="MuiDivider-root makeStyles-divider-12 MuiDivider-vertical"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h6
                class="MuiTypography-root makeStyles-persona-11 MuiTypography-h6"
              >
                Retailer
              </h6>
            </div>
          </div>
        </a>
      </div>
      <a
        class="makeStyles-link-14"
        href="http://consensource.io"
        target="_blank"
      >
        <p
          class="MuiTypography-root makeStyles-link-15 false MuiTypography-body1"
        >
          About
        </p>
      </a>
      <a
        class="makeStyles-link-14"
        href="/search"
        target=""
      >
        <p
          class="MuiTypography-root makeStyles-link-15 false MuiTypography-body1"
        >
          Search Factories
        </p>
      </a>
      <a
        class="makeStyles-link-14"
        href="/login"
        target=""
      >
        <p
          class="MuiTypography-root makeStyles-link-15 false MuiTypography-body1"
        >
          Login
        </p>
      </a>
    </div>
  </header>
</div>
`;
